; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_nl_classifier_test.c_nl_classifier_exit.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_nl_classifier_test.c_nl_classifier_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_classifier_instance = type { i32* }

@.str = private unnamed_addr constant [31 x i8] c"nl classifier exit successful\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nl_classifier_exit(%struct.nl_classifier_instance* %0) #0 {
  %2 = alloca %struct.nl_classifier_instance*, align 8
  store %struct.nl_classifier_instance* %0, %struct.nl_classifier_instance** %2, align 8
  %3 = load %struct.nl_classifier_instance*, %struct.nl_classifier_instance** %2, align 8
  %4 = getelementptr inbounds %struct.nl_classifier_instance, %struct.nl_classifier_instance* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.nl_classifier_instance*, %struct.nl_classifier_instance** %2, align 8
  %9 = getelementptr inbounds %struct.nl_classifier_instance, %struct.nl_classifier_instance* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @nl_close(i32* %10)
  %12 = load %struct.nl_classifier_instance*, %struct.nl_classifier_instance** %2, align 8
  %13 = getelementptr inbounds %struct.nl_classifier_instance, %struct.nl_classifier_instance* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @nl_socket_free(i32* %14)
  %16 = load %struct.nl_classifier_instance*, %struct.nl_classifier_instance** %2, align 8
  %17 = getelementptr inbounds %struct.nl_classifier_instance, %struct.nl_classifier_instance* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  br label %18

18:                                               ; preds = %7, %1
  %19 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @nl_close(i32*) #1

declare dso_local i32 @nl_socket_free(i32*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
